# LTMDOpenMM

./: .travis.yml  CMakeLists.txt  README.md  SConstruct
cmake_modules/: FindOpenMM.cmake
examples/ALA_5/: ala5-extended.tpr  sim-cpu.conf  sim-gpu.conf  sim.conf
examples/Villin_NLE_2/: Villin_NLE_unfolded-itr2_ffamber99sb_nml_eq.tpr  sim-cpu.conf  sim-gpu.conf  sim.conf
include/LTMD/: Analysis.h  Integrator.h  Kernels.h  Math.h  Matrix.h  Parameters.h  StepKernel.h
include/LTMD/CUDA/: CudaLTMDKernelSources.h  KernelFactory.h  KernelSources.h.in  Kernels.h  StepKernel.h
include/LTMD/Reference/: Dynamics.h  KernelFactory.h  StepKernel.h
include/nmlopenmm/: IntegrateNMLStepKernel.h  LTMDParameters.h  NMLIntegrator.h  NMLKernels.h  NormalModeAnalysis.h
site_scons/site_tools/: cuda.py
src/: NMLIntegrator.cpp  NormalModeAnalysis.cpp
src/LTMD/: Analysis.cpp  Integrator.cpp  Math.cpp  Matrix.cpp  Parameters.cpp
src/LTMD/CUDA/: Cuda.cpp  CudaLTMDKernelSources.cpp  KernelFactory.cpp  KernelSources.cpp.in  Kernels.cpp  StepKernel.cpp
src/LTMD/CUDA/kernels/: LTMDUpdate.cpp  LTMDUpdate.cu  NMLupdates_kernel.cu  fastnoises_kernel.cu  linearMinimizers_kernel.cu  minimizationSteps_kernel.cu  quadraticMinimizers_kernel.cu
src/LTMD/Reference/: Dynamics.cpp  KernelFactory.cpp  Reference.cpp  StepKernel.cpp
test/: CMakeLists.txt  TestEthane.cpp  TestNormalModeLangevin.cpp  main.cpp
test/data/: EMatrix.txt  QMatrix.txt  SortedEigenvalues.txt  UnsortedEigenvalues.txt  block.txt  block_gdof_values.txt  block_gdof_vectors.txt  block_masses.txt  block_positions.txt  block_values.txt  block_vectors.txt  output.txt  villin.xml  ww-fip35evec.txt
test/include/: AnalysisTest.h  CudaTest.h  LibraryTest.h  MathTest.h  ReferenceTest.h
test/src/: AnalysisTest.cpp  CudaTest.cpp  LibraryTest.cpp  MathTest.cpp  ReferenceTest.cpp
